# public-experiments

./: README.md
llm-determinism/: README.md  pyproject.toml
llm-determinism/notebooks/: 00_20250219_initial_tests.ipynb  00_20250220_early_functions_better_experiment.ipynb
llm-determinism/src/llm_determinism/: __init__.py  __main__.py  settings.py
