[project]
name = "llm-determinism"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.7"
dynamic = [ "version",]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=0.19.10",
    "pandas>=2.2.3",
    "transformers>=4.49.0",
    "iprogress>=0.4",
]

[project.scripts]
llm-determinism = "llm_determinism.__main__:main"

[tool.kedro]
package_name = "llm_determinism"
project_name = "llm-determinism"
kedro_init_version = "0.19.10"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "llm_determinism.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
